* Fix reported build time.  Patch by Frederic Mockel. 

MKS
----------------------
* Fix synchronization failure on Linux (CC-576).

OSEnvironment
----------------------
* Fix for Windows Server 2003 and Java 5 (CC-573). Patch by Nate Austin

P4
----------------------
* Display modification time using local timezone if correctForServerTime is true (CC-574). Patch by Anatol Pomozov

SocketPublisher
----------------------
* Send project name and fixed vs. successful status (CC-575). Patch by Daniel Lindner

Veto
----------------------
* New SourceControl plug-in used to prevent a project from building when a dependency is out of date.

reporting application
======================

rss.jsp
----------------------
* Fixed NPE for projects without logs in their directory.

testdetails.xsl
----------------------
* Fixed failure and error links (CC-545). Patch by J. David Beutel.


CruiseControl Release Notes - 2.6

general
======================
* End of support for compiling/running Cruise with JDK 1.3. New earliest supported JDK is 1.4.x.
* Replace Xalan with Saxon.
* Overhaul handling of threads, streams and logging when executing external processes.

contrib
======================

distributed
----------------------
* Update distributed CC code for refactoring in core (CC-485). Patch by Dan Rollo
* Fix bug in distributed where empty results subdirectories cause exception (CC-458). Patch by Dan Rollo
* Fix bug where distributed InteractiveBuildUtility always fails to build (CC-459). Patch by Dan Rollo
* Pass CC_OPTS in cruisecontrol.sh for distributed CC.  Patch by Dan Rollo.
* Fix bug in distributed where BuildAgent restart() and kill() never waited for build to finish (CC-517). Patch by Dan Rollo

mainAsWar
----------------------
* Allows the main build loop to run in a servlet container.

packager
----------------------